--- a/qa.html
+++ b/qa.html
@@ -1,7 +1,7 @@
 <style>
 body {
   color: black;
-  background-color: #107038;
+  background-color: black;//#107038;
   font-weight: 600;
   font-family: 'Avenir Next', sans-serif;
   //text-transform: uppercase;
@@ -36,8 +36,10 @@ html { height: 100% }
   padding: 2em;
   //box-shadow: inset 0 0 0 1px rgba(white,.8);
   word-wrap: break-word;
+  color: white;
 }
 a { color: rgba(0,0,0,.6) }
+#inputfile { color: white;}
 </style>
 <body id='body' >
 <input type="file" name="inputfile" id="inputfile">
@@ -88,11 +90,9 @@ g_word=0
 g_displayMode=null
 g_colorOn=false
 function clickdisplay(e,n){
-console.log(g_counter)
 if (e){ e.stopPropagation() }
  if (n===2){console.log('dbl');g_counter-=1;g_letter=0;g_word=0}
  else if (n===1){
- console.log('single'); 
  if ( g_displayMode == 'letter' ) {
    if ( g_counter == -1 ){g_counter+=1}
    else if ( fileData[g_counter].length == g_letter ) 
@@ -131,7 +131,6 @@ g_counter=Math.floor(Math.random() * (max - min + 1) ) + min
 
 function movetoname(){
 searchstring=document.getElementById('buttoninput').value
-console.log(g_counter)
 let match=false
 for(i=0;i<fileData.length;i++){
     if ( i<g_counter  || (! (fileData[i].startsWith('#?#') )) ) continue
@@ -139,7 +138,7 @@ for(i=0;i<fileData.length;i++){
     name_arr=fileData[i].split('#').filter(d=>d.includes('name@'))[0].split('@')
     name_arr.shift()
     console.log(name_arr)
-    if ( name_arr[0].toLowerCase().includes(searchstring) ) { console.log(i);g_counter = i-1 ; match= true;break }
+    if ( name_arr[0].toLowerCase().includes(searchstring) ) { g_counter = i-1 ; match= true;break }
 }
 if(!(match)){g_counter=0}
 }
@@ -156,7 +155,6 @@ function rotate()
 {
 rotateValue=parseInt(document.getElementById('buttoninput').value)*1000
 rotateValue=isNaN(rotateValue)?3000:rotateValue
-console.log(rotateValue)
 if (g_flag=="1")
 {
 g_flag="2"
