--- a/treeV7Cleanup.html
+++ b/treeV7Cleanup.html
@@ -52,14 +52,15 @@
   top: 150px;
   width: 80%;
   height: 70%;
-  background-color: #B04759;
+  background-color: black;
   font-size: 20px;
   }
   #textAreaPop{
   width: 100%;
   height: 90%;
-  font-size: 25px;
-  background-color: #8C4788;
+  font-size: 14px;
+  background-color: black;
+  color: white;
   }
   .buttonGroup{
   position: absolute;
@@ -887,10 +888,15 @@ menu.style.position="absolute";menu.style.zIndex=1000000;menu.style.display='blo
 
 g_startLink=false 
 function rightClickAction(option){
+resultAll=[{id:v_triggerer.id  }]
+resultAll=nodeDataSearch(resultAll)
+tag=resultAll[0]['tag']
+if (!(tag)){tag=''}
 if ( option == "changeAttribute" ) {
 inputValues={'1:t_color':['1_blue','99_<custom>'],
              '2:d_visibility':['1_visible','2_hidden'],
              '3:type':['1_bubble'],
+             '4:tag':['99_<custom>'],
              '99:custom':['99_<custom>']
             }
 inputkeys=Object.keys(inputValues)//get keys 1:t_color
@@ -905,7 +911,9 @@ if ( chosenInputKey=="99:custom" ) {name=prompt('Enter Key')} else { name=chosen
 //same for values 
 console.log(chosenInputKey,Object.keys(inputValues[chosenInputKey]))
 valueKeys=inputValues[chosenInputKey]//get values for chosen key 
-let value=prompt(valueKeys.toString().replace(",","\n"))
+defaultValue=''
+if ( chosenInputKey=="4:tag" ){ defaultValue = '99_'+tag }
+let value=prompt(valueKeys.toString().replace(",","\n"), defaultValue)
 //check needed in this place as well as below
 if (value==null || value=='' ){alert('unacceptable value '+value);return}
 if (value.startsWith('99_')){/*do nothing*/}
@@ -914,11 +922,10 @@ console.log(value)
 //check needed in this place as well as above
 if (value == null || value.replace(' ','') == '' || !(value.includes('_')) || value.split('_')[1]=='' ){alert('unacceptable value '+value);return}
 else {value=value.split('_')[1]}
-resultAll=[{id:v_triggerer.id  }]
+
 if (g_wholeTree) //apply for whole tree
 {
 AllTreeColorChange()
-resultAll=nodeDataSearch(resultAll)
 children=getAllChildren(resultAll[0])
 console.log(children)
 resultAll=resultAll.concat(children)
