--- a/data/drawV1.html
+++ b/data/drawV1.html
@@ -55,8 +55,8 @@ function f_createIdIfNull(data){if (!(data.id)){data.id=Date.now().toString()}}
 
 function f_generateArcPath(data){
 counter=data.no_of_bubble;let i=0;let bubble_data=[]
-//f_execute(f_getData, data.id.split('_')[0]+'_c'+1, g_masterData)
-for(let i=0;i<counter;i++){ bubble_data.push( f_execute(f_getData, data.id.split('_')[0]+'_c'+(i+1), g_masterData ) ) }
+
+for(let i=0;i<counter;i++){ bubble_data.push( f_execute(f_getData, data.id.split('_')[0]+'_c'+(i+1), g_masterData  ) ) }
 while(i<counter){
  if(i==0){path="M "+bubble_data[0].cx+" "+bubble_data[0].cy;i++}
  else if ( counter - i > 2 )
@@ -74,8 +74,8 @@ function f_materialize(data){
 if(data.type=='g'){f_materializeG(data)}
 if(data.type=='circle'){f_materializeCircle(data)}
 if(data.type=='bubble'){
-f_materializeCircle(data)
-  
+f_materializeCircle(data)  
+
 }
 if(data.type=='arc'){f_materializeArc(data)}
 return data
@@ -138,20 +138,20 @@ return data
 
 function f_createArc(params,override_data){
   //create group 
-  let g_data = f_execute(f_createWithoutG, {'type': 'g'}, {parent: override_data.parent} )
+  let g_data=f_execute(f_createWithoutG, {'type': 'g'}, {parent: override_data.parent} )
   //create arc data 
-  let arc_data = f_execute( f_createData, params )
-  arc_data = {...arc_data, ...override_data, ...{parent: g_data.id, id:g_data.id+'_e'}}
+  let arc_data=f_execute( f_createData, params )
+  arc_data = {...arc_data, ...override_data, ...{parent: g_data.id,id:g_data.id+'_e'}}
   //create bubbles 
   for(let i=0;i<arc_data.no_of_bubble;i++){
-  f_execute(f_create,{type: 'bubble', wrap_by_g:false},{parent: g_data.id, cx: (i+1)*30, cy: (i+1)*30, id: g_data.id+"_c"+(i+1)})
-}
-f_execute(f_draw,arc_data)
+  f_execute(f_create,{type:'bubble', wrap_by_g:false},{parent: g_data.id, cx: (i+1)*30, cy: (i+1)*30, id: g_data.id+"_c"+(i+1) }) 
+  }
+  f_execute(f_draw,arc_data)
 }
 
 function f_redraw(params, override_data, data){
 if(params.type=='arc'){
-let path = f_generateArcPath(data); data.elementPointer.setAttribute('d',path)
+let path = f_generateArcPath(data); data.elementPointer.setAttribute('d', path)
 }
 }
 
@@ -185,18 +185,18 @@ function f_createBubbleData(){let data=f_createBaseData();data={...data,...{'typ
 function f_createArcData(){let data=f_createBaseData();data={...data,...{'type': 'arc',no_of_bubble:4,style: {"fill":"transparent","stroke":"black","stroke-width":"1px"}}};return data}
 
 function f_setData(params={},override_data={},data){//transient wont impact materialization
-if (params.type=='rel'){ f_execute(f_setRelData,data.parent,data)   ; }
-else { f_execute(f_setGenericData,override_data,data) ;}
-//CALL MATERIALIZE 
-if (params.mode=='transient') {} else {
- f_execute(f_setMaterialization,params,override_data,data)
+ if (params.type=='rel'){ f_execute(f_setRelData,data.parent,data)   ; }
+ else { f_execute(f_setGenericData,override_data,data) ;}
+ //CALL MATERIALIZE 
+ if (params.mode=='transient') {} else { 
+ f_execute(f_setMaterialization,params, override_data, data) 
 }
 }
 
 
 function f_setRelData(parentId,data){ //keep theses function as simple as possible even to be called from outside
   if(data.id=='frame'){console.log('frame is base hence no action needed');return}
-  if(data.parent==parentId){console.log('parent rel already established hence no action needed');return}
+  if(data.parent==parentId){console.log('parent rel already established hence no action needed');}//dont return still child may not be established in parent
   let p_data=f_getData(parentId,g_masterData)
   p_data.child.filter(d=>d.id==data.id).length <= 0 ? p_data.child.push(data): console.log("This item already exists");
   data.parent=parentId
